<resources>
    <string name="app_name">Parsagram</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Sign In</string>
    <string name="caption_hint">Description</string>
    <string name="take_picture_button">Take picture</string>
    <string name="submit_button">Submit</string>
    <string name="sign_up_button_txt">Sign Up</string>
    <string name="home_action">Home</string>
    <string name="compose_action">Compose</string>
    <string name="profile_action">Profile</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="sample_username">sample_username</string>
    <string name="sample_caption">Sample Caption</string>
</resources>